...
  <string name="achievements">Achievements</string>
  <string name="rewards">Rewards</string>
  <string name="wall">Wall</string>
  <string name="navigate">Navigate</string>
  <string name="about">About</string>
  <string name="settings">Settings</string>
  <string name="profile">Profile</string>
  <string name="events">Events</string>

  <string name="login_sign_in">Sign in</string>
  <string name="username_or_e_mail">Username or E-mail</string>
  <string name="login_password">Password</string>
  <string name="have_you_forgotten_your_password">Have you forgotten your password?</string>
...
  </string>
  <string name="location_connection_failed">Location services connection failed.</string>
  <string name="not_implemented_yet">Not implemented yet</string>
  <string name="action" translatable="false">Action</string>

  <string name="level">Level</string>
  <string name="sign_out">Sign out</string>
  <string name="issue_name">Issue Name</string>
  <string name="save_changes">Save changes</string>
  <string name="description">Description</string>

  <!-- Categories -->
  <string name="road_signs">Road signs</string>
...
  <string name="issue_created">Issue created</string>
  <string name="must_enter_a_description">You must enter a description</string>
  <string name="creating_new_issue">Creating new issue&#8230;</string>
  <string name="must_insert_description">You must enter a description</string>

  <string name="tab_label_issues">ISSUES</string>
  <string name="tab_label_badges">BADGES</string>
  <string name="tab_spec_issues">Issues</string>
  <string name="tab_spec_badges">Badges</string>

  <string name="navigate_title">Navigate</string>
  <string name="wall_title">Wall</string>
  <string name="profile_title">My profile</string>
...
