...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.civify.activity.DrawerActivity"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

...
