...
    android:background="#ffffff"
    android:orientation="vertical"
    tools:ignore="MissingPrefix,Overdraw"
    >

  <TextView
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/what_kind_of_problem"
      android:textAlignment="center"
      android:textColor="#000000"
      android:textSize="28sp"
...
